--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,6 @@ a:hover
     display: inline-block;
     height: 350px;
     width: 350px ;
-
 }
 .gallery
 {
@@ -200,9 +199,10 @@ li
     border: 1px solid rgba(173, 162, 162, 0.89);
     border-radius: 10px;
     background-color: rgba(245, 245, 245, 0.74);
-    width: 100%;
+    width: 109%;
     height: 20px;
     box-shadow: 2px 2px 5px #e2ebeb,-2px -2px 5px #e2ebeb;
+    text-align: center;
 
 }
 .certbtn
